--- a/dev/index.html
+++ b/dev/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>React Basic Hooks Template</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
     <div id="container"></div>
+    <svg width="900" height="900"></svg>
     <script src="./index.js"></script>
   </body>
 </html>
