--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-    <div id="container"></div>
+    <div id="root"></div>
     <script src="./index.js"></script>
   </body>
 </html>
