--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>React Basic Hooks Template</title>
+    <title>Jira Dependencies FE</title>
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
